<resources>
    <string name="app_name">LoveComingHome</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_menu_home">首页</string>
    <string name="tab_menu_task">寻人</string>
    <string name="tab_menu_alert">发布</string>
    <string name="tab_menu_comment">消息</string>
    <string name="tab_menu_my">我的</string>
    <string name="tab_menu_setting">设置</string>
    <string name="username">姓名：</string>
    <string name="usernum">编号：</string>
    <drawable name="clr_normal">#FF4500</drawable>
    <drawable name="clr_pressed">#a44100</drawable>
    <drawable name="item_view_pressed">#808080</drawable>

    <string-array name="ctype">
        <item>电影</item>
        <item>图书</item>
        <item>音乐</item>
        <item>游戏</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
